grammar/.antlr/CWScriptParser.java
// Generated from /Users/william/cwscript/cwsc-v1/grammar/CWScriptParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CWScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEBUG=1, CONTRACT=2, INTERFACE=3, IMPORT=4, IMPLEMENTS=5, EXTENDS=6, ERROR=7, 
		EVENT=8, DEFER=9, INSTANTIATE_NOW=10, EXEC_NOW=11, QUERY_NOW=12, DELEGATE_EXEC=13, 
		INSTANTIATE=14, EXEC=15, QUERY=16, REPLY=17, FOR=18, IN=19, FROM=20, STATE=21, 
		IF=22, IS=23, TRY=24, CATCH=25, ELSE=26, NOT=27, NONE=28, MUT=29, AND=30, 
		OR=31, TRUE=32, FALSE=33, FN=34, LET=35, CONST=36, FAIL=37, RETURN=38, 
		STRUCT=39, ENUM=40, TYPE=41, EMIT=42, AS=43, TILDE=44, LPAREN=45, RPAREN=46, 
		LBRACK=47, RBRACK=48, LBRACE=49, RBRACE=50, DOT=51, COMMA=52, D_QUEST=53, 
		QUEST=54, BANG=55, SEMI=56, COLON=57, D_COLON=58, HASH=59, AT=60, AMP=61, 
		ARROW=62, FAT_ARROW=63, BAR=64, S_QUOTE=65, D_QUOTE=66, EQ=67, EQ_EQ=68, 
		NEQ=69, PLUS=70, PLUS_EQ=71, MINUS=72, MINUS_EQ=73, MUL=74, MUL_EQ=75, 
		DIV=76, DIV_EQ=77, MOD=78, MOD_EQ=79, LT=80, LT_EQ=81, GT=82, GT_EQ=83, 
		POW=84, Ident=85, StringLiteral=86, IntLiteral=87, DecLiteral=88, BoolLiteral=89, 
		CWSPEC_LINE_COMMENT=90, CWSPEC_BLOCK_COMMENT=91, LINE_COMMENT=92, BLOCK_COMMENT=93, 
		WS=94;
	public static final int
		RULE_sourceFile = 0, RULE_topLevelStmt = 1, RULE_contractDefn = 2, RULE_interfaceDefn = 3, 
		RULE_contractBlock = 4, RULE_importStmt = 5, RULE_contractItem = 6, RULE_param = 7, 
		RULE_paramList = 8, RULE_fnParams = 9, RULE_structDefn_fn = 10, RULE_errorDefn = 11, 
		RULE_errorDefnBlock = 12, RULE_eventDefn = 13, RULE_eventDefnBlock = 14, 
		RULE_stateDefnBlock = 15, RULE_stateDefn = 16, RULE_mapKeyDefn = 17, RULE_instantiateDefn = 18, 
		RULE_instantiateDecl = 19, RULE_execDefn = 20, RULE_execDecl = 21, RULE_queryDefn = 22, 
		RULE_queryDecl = 23, RULE_replyDefn = 24, RULE_enumDefn = 25, RULE_variant_ = 26, 
		RULE_variant_struct = 27, RULE_variant_unit = 28, RULE_typeExpr = 29, 
		RULE_typeArg = 30, RULE_fnType = 31, RULE_typeLens = 32, RULE_typePath = 33, 
		RULE_typeVariant = 34, RULE_typeDefn = 35, RULE_structDefn = 36, RULE_typeAliasDefn = 37, 
		RULE_fnDefn = 38, RULE_annot = 39, RULE_callOptions = 40, RULE_stmt = 41, 
		RULE_debugStmt_ = 42, RULE_letStmt_ = 43, RULE_constStmt_ = 44, RULE_identBinding_ = 45, 
		RULE_let_binding = 46, RULE_assignStmt_ = 47, RULE_assignLHS = 48, RULE_expr = 49, 
		RULE_closureParams = 50, RULE_closure = 51, RULE_block = 52, RULE_tryCatchElseExpr_ = 53, 
		RULE_catchClause = 54, RULE_arg = 55, RULE_memberVal = 56, RULE_literal = 57, 
		RULE_ifStmt_ = 58, RULE_elseClause = 59, RULE_forStmt_ = 60, RULE_ident = 61, 
		RULE_reservedKeyword = 62;
	private static String[] makeRuleNames() {
		return new String[] {
			"sourceFile", "topLevelStmt", "contractDefn", "interfaceDefn", "contractBlock", 
			"importStmt", "contractItem", "param", "paramList", "fnParams", "structDefn_fn", 
			"errorDefn", "errorDefnBlock", "eventDefn", "eventDefnBlock", "stateDefnBlock", 
			"stateDefn", "mapKeyDefn", "instantiateDefn", "instantiateDecl", "execDefn", 
			"execDecl", "queryDefn", "queryDecl", "replyDefn", "enumDefn", "variant_", 
			"variant_struct", "variant_unit", "typeExpr", "typeArg", "fnType", "typeLens", 
			"typePath", "typeVariant", "typeDefn", "structDefn", "typeAliasDefn", 
			"fnDefn", "annot", "callOptions", "stmt", "debugStmt_", "letStmt_", "constStmt_", 
			"identBinding_", "let_binding", "assignStmt_", "assignLHS", "expr", "closureParams", 
			"closure", "block", "tryCatchElseExpr_", "catchClause", "arg", "memberVal", 
			"literal", "ifStmt_", "elseClause", "forStmt_", "ident", "reservedKeyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'debug!'", "'contract'", "'interface'", "'import'", "'implements'", 
			"'extends'", "'error'", "'event'", "'defer'", "'instantiate!'", "'exec!'", 
			"'query!'", "'delegate_exec!'", "'instantiate'", "'exec'", "'query'", 
			"'reply'", "'for'", "'in'", "'from'", "'state'", "'if'", "'is'", "'try'", 
			"'catch'", "'else'", "'not'", "'None'", "'mut'", "'and'", "'or'", "'true'", 
			"'false'", "'fn'", "'let'", "'const'", "'fail!'", "'return'", "'struct'", 
			"'enum'", "'type'", "'emit'", "'as'", "'~'", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "'.'", "','", "'??'", "'?'", "'!'", "';'", "':'", "'::'", 
			"'#'", "'@'", "'&'", "'->'", "'=>'", "'|'", "'''", "'\"'", "'='", "'=='", 
			"'!='", "'+'", "'+='", "'-'", "'-='", "'*'", "'*='", "'/'", "'/='", "'%'", 
			"'%='", "'<'", "'<='", "'>'", "'>='", "'**'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEBUG", "CONTRACT", "INTERFACE", "IMPORT", "IMPLEMENTS", "EXTENDS", 
			"ERROR", "EVENT", "DEFER", "INSTANTIATE_NOW", "EXEC_NOW", "QUERY_NOW", 
			"DELEGATE_EXEC", "INSTANTIATE", "EXEC", "QUERY", "REPLY", "FOR", "IN", 
			"FROM", "STATE", "IF", "IS", "TRY", "CATCH", "ELSE", "NOT", "NONE", "MUT", 
			"AND", "OR", "TRUE", "FALSE", "FN", "LET", "CONST", "FAIL", "RETURN", 
			"STRUCT", "ENUM", "TYPE", "EMIT", "AS", "TILDE", "LPAREN", "RPAREN", 
			"LBRACK", "RBRACK", "LBRACE", "RBRACE", "DOT", "COMMA", "D_QUEST", "QUEST", 
			"BANG", "SEMI", "COLON", "D_COLON", "HASH", "AT", "AMP", "ARROW", "FAT_ARROW", 
			"BAR", "S_QUOTE", "D_QUOTE", "EQ", "EQ_EQ", "NEQ", "PLUS", "PLUS_EQ", 
			"MINUS", "MINUS_EQ", "MUL", "MUL_EQ", "DIV", "DIV_EQ", "MOD", "MOD_EQ", 
			"LT", "LT_EQ", "GT", "GT_EQ", "POW", "Ident", "StringLiteral", "IntLiteral", 
			"DecLiteral", "BoolLiteral", "CWSPEC_LINE_COMMENT", "CWSPEC_BLOCK_COMMENT", 
			"LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CWScriptParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CWScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CWScriptParser.EOF, 0); }
		public List<TopLevelStmtContext> topLevelStmt() {
			return getRuleContexts(TopLevelStmtContext.class);
		}
		public TopLevelStmtContext topLevelStmt(int i) {
			return getRuleContext(TopLevelStmtContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(CWScriptParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(CWScriptParser.SEMI, i);
		}
		public SourceFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceFile; }
	}

	public final SourceFileContext sourceFile() throws RecognitionException {
		SourceFileContext _localctx = new SourceFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sourceFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1261755563528683518L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 65077249L) != 0)) {
				{
				setState(128);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DEBUG:
				case CONTRACT:
				case INTERFACE:
				case IMPORT:
				case IMPLEMENTS:
				case EXTENDS:
				case ERROR:
				case EVENT:
				case DEFER:
				case INSTANTIATE_NOW:
				case EXEC_NOW:
				case QUERY_NOW:
				case DELEGATE_EXEC:
				case INSTANTIATE:
				case EXEC:
				case QUERY:
				case REPLY:
				case FOR:
				case IN:
				case FROM:
				case STATE:
				case IF:
				case TRY:
				case ELSE:
				case NOT:
				case NONE:
				case MUT:
				case AND:
				case OR:
				case TRUE:
				case FALSE:
				case FN:
				case LET:
				case CONST:
				case FAIL:
				case RETURN:
				case STRUCT:
				case ENUM:
				case TYPE:
				case EMIT:
				case LPAREN:
				case LBRACK:
				case LBRACE:
				case BANG:
				case AT:
				case BAR:
				case LT:
				case Ident:
				case StringLiteral:
				case IntLiteral:
				case DecLiteral:
				case BoolLiteral:
					{
					setState(126);
					topLevelStmt();
					}
					break;
				case SEMI:
					{
					setState(127);
					match(SEMI);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelStmtContext extends ParserRuleContext {
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public ContractDefnContext contractDefn() {
			return getRuleContext(ContractDefnContext.class,0);
		}
		public InterfaceDefnContext interfaceDefn() {
			return getRuleContext(InterfaceDefnContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TopLevelStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStmt; }
	}

	public final TopLevelStmtContext topLevelStmt() throws RecognitionException {
		TopLevelStmtContext _localctx = new TopLevelStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelStmt);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				importStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				contractDefn();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				interfaceDefn();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(138);
				stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContractDefnContext extends ParserRuleContext {
		public AnnotContext annot;
		public List<AnnotContext> ann = new ArrayList<AnnotContext>();
		public IdentContext name;
		public TypePathContext base;
		public TypePathContext typePath;
		public List<TypePathContext> interfaces = new ArrayList<TypePathContext>();
		public ContractBlockContext body;
		public TerminalNode CONTRACT() { return getToken(CWScriptParser.CONTRACT, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(CWScriptParser.EXTENDS, 0); }
		public TerminalNode IMPLEMENTS() { return getToken(CWScriptParser.IMPLEMENTS, 0); }
		public ContractBlockContext contractBlock() {
			return getRuleContext(ContractBlockContext.class,0);
		}
		public List<AnnotContext> annot() {
			return getRuleContexts(AnnotContext.class);
		}
		public AnnotContext annot(int i) {
			return getRuleContext(AnnotContext.class,i);
		}
		public List<TypePathContext> typePath() {
			return getRuleContexts(TypePathContext.class);
		}
		public TypePathContext typePath(int i) {
			return getRuleContext(TypePathContext.class,i);
		}
		public ContractDefnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contractDefn; }
	}

	public final ContractDefnContext contractDefn() throws RecognitionException {
		ContractDefnContext _localctx = new ContractDefnContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_contractDefn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(141);
				((ContractDefnContext)_localctx).annot = annot();
				((ContractDefnContext)_localctx).ann.add(((ContractDefnContext)_localctx).annot);
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			match(CONTRACT);
			{
			setState(148);
			((ContractDefnContext)_localctx).name = ident();
			}
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(149);
				match(EXTENDS);
				{
				setState(150);
				((ContractDefnContext)_localctx).base = typePath();
				}
				}
			}

			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTS) {
				{
				setState(153);
				match(IMPLEMENTS);
				{
				setState(154);
				((ContractDefnContext)_localctx).typePath = typePath();
				((ContractDefnContext)_localctx).interfaces.add(((ContractDefnContext)_localctx).typePath);
				}
				}
			}

			{
			setState(157);
			((ContractDefnContext)_localctx).body = contractBlock();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDefnContext extends ParserRuleContext {
		public AnnotContext annot;
		public List<AnnotContext> ann = new ArrayList<AnnotContext>();
		public IdentContext name;
		public TypePathContext base;
		public ContractBlockContext body;
		public TerminalNode INTERFACE() { return getToken(CWScriptParser.INTERFACE, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(CWScriptParser.EXTENDS, 0); }
		public ContractBlockContext contractBlock() {
			return getRuleContext(ContractBlockContext.class,0);
		}
		public List<AnnotContext> annot() {
			return getRuleContexts(AnnotContext.class);
		}
		public AnnotContext annot(int i) {
			return getRuleContext(AnnotContext.class,i);
		}
		public TypePathContext typePath() {
			return getRuleContext(TypePathContext.class,0);
		}
		public InterfaceDefnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDefn; }
	}

	public final InterfaceDefnContext interfaceDefn() throws RecognitionException {
		InterfaceDefnContext _localctx = new InterfaceDefnContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_interfaceDefn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT) {
				{
				{
				setState(159);
				((InterfaceDefnContext)_localctx).annot = annot();
				((InterfaceDefnContext)_localctx).ann.add(((InterfaceDefnContext)_localctx).annot);
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165);
			match(INTERFACE);
			{
			setState(166);
			((InterfaceDefnContext)_localctx).name = ident();
			}
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(167);
				match(EXTENDS);
				{
				setState(168);
				((InterfaceDefnContext)_localctx).base = typePath();
				}
				}
			}

			{
			setState(171);
			((InterfaceDefnContext)_localctx).body = contractBlock();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContractBlockContext extends ParserRuleContext {
		public ContractItemContext contractItem;
		public List<ContractItemContext> body = new ArrayList<ContractItemContext>();
		public TerminalNode LBRACE() { return getToken(CWScriptParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CWScriptParser.RBRACE, 0); }
		public List<ContractItemContext> contractItem() {
			return getRuleContexts(ContractItemContext.class);
		}
		public ContractItemContext contractItem(int i) {
			return getRuleContext(ContractItemContext.class,i);
		}
		public ContractBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contractBlock; }
	}

	public final ContractBlockContext contractBlock() throws RecognitionException {
		ContractBlockContext _localctx = new ContractBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_contractBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(LBRACE);
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 576464686495793536L) != 0)) {
				{
				{
				setState(174);
				((ContractBlockContext)_localctx).contractItem = contractItem();
				((ContractBlockContext)_localctx).body.add(((ContractBlockContext)_localctx).contractItem);
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(180);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
